# Long-Number

./: CMakeLists.txt  LongNumber.cpp  LongNumber.h  main.cpp
tests/: CMakeLists.txt  Test.cpp
